--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.0.6",
+    "@nestjs/websockets": "^11.0.6",
     "@prisma/client": "^6.3.0",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.39.0",
     "ioredis": "^5.4.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
